--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:300,400,700);
-@import url(http://weloveiconfonts.com/api/?family=fontawesome);
-
-[class*="fontawesome-"]:before {
+/* @import url(http://weloveiconfonts.com/api/?family=fontawesome);
+ */
+/* [class*="fontawesome-"]:before {
   font-family: 'fontawesome', sans-serif;
-}
+} */
 .App {
  
  /*  background-color: #F2F2F0;  */
@@ -141,7 +141,7 @@ input[type=number]{
   }
 
 .select-search-box::after {
-    font-family: fontawesome;
+    font-family: FontAwesome;
     content:"\f078";
     position: absolute;
     top: 0;
