--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 .App {
  
  /*  background-color: #F2F2F0;  */
-  background-color: white; 
+  background-color: red; 
   overflow: hidden;
   text-align: center;
   height: 100vh;
