--- a/src/App.css
+++ b/src/App.css
@@ -140,7 +140,7 @@ input[type=number]{
     box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.4);
   }
 
-.select-search-box::after {
+.select-search-box::before {
     font-family: FontAwesome;
     content:"\f078";
     position: absolute;
