--- a/src/App.css
+++ b/src/App.css
@@ -74,7 +74,7 @@ h3{
 /*  background-color: #37353a;  */
 /*   background-color:red;  */ 
   width:100%;
-  color:white;
+  color:#95afc0;
   
   
  
