--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,14 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:300,400,700);
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);
-.App {
 
+.App {
   background-color: white; 
   overflow: hidden;
   text-align: center;
   height: 100vh;
   width: 100vw; 
 }
-
+/*------------------------anim logo----------------  */
 h1,h2,h3{
   position: absolute; 
   left: 0; 
@@ -30,18 +30,16 @@ h3{
   font-size: 1rem;
   font-weight: bold;
 }
+/*-----------------------------------------------*/
 
 .App-header {
-  
   font-size: 2.2rem;
   font-weight: 900;
   background-color: white;
   height: 7rem;
   width:100%;
   padding: 20px;
-  color:#95afc0;
-  /* box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.9), 0 0 25px 0 rgba(0, 0, 0, 0.5);  */
-   
+  color:#95afc0;  
 }
  .App-header::after{
  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.9), 0 0 25px 0 rgba(0, 0, 0, 0.5);
@@ -59,27 +57,15 @@ h3{
   background-image: url(./img/fond.jpg);
   background-repeat: no-repeat;  
   background-size: cover;
-   width:100%;
-   height: 5rem
-  /* background-image: url(./img/sea.jpg);
-  background-repeat: no-repeat;  
-  background-size: contain;
   width:100%;
-  height: 25rem */
-
+  height: 5rem
 }
-
 .change_coin {
-  
   font-family: Raleway;
-/*  background-color: #37353a;  */
-/*   background-color:red;  */ 
+  /*  background-color: #37353a;  */
+  /*   background-color:red;  */ 
   width:100%;
   color:#95afc0;
-  
-  
- 
-   
 }
 .header{
   color:#95afc0;
@@ -91,8 +77,6 @@ h3{
   bottom:0;
   height: 60px;
   width:100%;
-
-   
 }
 input[type=number]{
   
