--- a/src/App.css
+++ b/src/App.css
@@ -411,18 +411,21 @@ ul.select-search-box__options {
   
 }
 .price_aff{
- /*  border: #5D6D7E solid 1px; */
+  
   background:  #fff;
- /*  box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.4); */
-  margin-top: 40px;
+ 
+  margin-top: 60px;
   color:#95afc0;
+  line-height: 60px;
   display: flex;
+  flex-direction: row;     
   justify-content: center;
-  align-items: center;     
-  margin-left: 385px;
+  align-content: center; 
+  border: #5D6D7E solid 1px;
   font-size: 1.5rem;
-  height: 30px;
-  margin: 0;
+  height: 60px;
+  margin: 0 auto;
+  width: 40%;
 }
 .resultat{
 
