--- a/src/App.css
+++ b/src/App.css
@@ -141,7 +141,7 @@ input[type=number]{
     position: absolute;
     font-size: 16px;
     top: 0;
-    right: 0;
+    margin-left: 1rem;
     width: 40px;
     text-align: center;
     line-height: 50px;
@@ -150,6 +150,7 @@ input[type=number]{
     z-index: 1;
 
   }
+  /*loop*/
   .firstLine .select-search-box__search::before {
     font-family: fontawesome;
     content:"\f002";
@@ -177,7 +178,7 @@ input[type=number]{
   background: transparent; 
   border-radius: 6px;
   padding-left: 0;
-
+  margin-right:10rem;
   
   }
 
@@ -192,7 +193,8 @@ input[type=number]{
   }
 
  .select-search-box__select--display {
-    display: block;       
+    display: block;
+
     }
 
      /*header usd*/
@@ -221,7 +223,7 @@ input[type=number]{
     font-family: sans-serif;
     line-height: 50px;
     margin: 0;
-   
+  
 
   }
 
@@ -387,6 +389,9 @@ ul.select-search-box__options {
 /*   margin-bottom: 1rem; */
   box-shadow: 0 3px 15px 0 rgba( 149, 175, 192, 0.25), 0 3px 10px 0 rgba(149, 175, 192, 0.05); 
 }
+.find div:nth-child(2) .addition  {
+  color:transparent!important;
+}
 .plus{
   cursor: pointer;
   margin-left: 10px;
@@ -458,8 +463,28 @@ button{
    /* background: transparent; */
   box-shadow: 0 3px 15px 0 rgba( 149, 175, 192, 0.25), 0 3px 10px 0 rgba(149, 175, 192, 0.05);
 }
-
-
+/*add*/
+.newCrypto{
+  font-size: 16px;
+  }
+  .addition{
+   color:#4A5259;
+   font-size: 3rem;
+   position: absolute;
+   z-index: 2;
+   margin-top: -2.7rem;
+   margin-left: -2.3rem;
+   
+  }
+/* .newCrypto::before {
+    font-family: fontawesome;
+    content:"\f0a9";
+    position: absolute;
+    font-size: 16px;
+    width: 60px;
+    color: #95afc0;
+    z-index: 10;
+  } */
 
 
 /*--------------------------------------------------------------------------*/
