--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,15 @@
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);
 
 .App {
+  position:relative;
   background-color: white; 
-  overflow: hidden;
+  overflow-x: hidden;
   text-align: center;
   height: 100vh;
   width: 100vw; 
+
 }
+
 /*------------------------anim logo----------------  */
 h1,h2,h3{
   position: absolute; 
@@ -33,27 +36,31 @@ h3{
 /*-----------------------------------------------*/
 
 .App-header {
+
   font-size: 2.2rem;
   font-weight: 900;
   background-color: white;
   height: 7rem;
   width:100%;
   padding: 20px;
-  color:#95afc0;  
+  color:#95afc0; 
+
 }
  .App-header::after{
- box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.9), 0 0 25px 0 rgba(0, 0, 0, 0.5);
- box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3), 0 0 25px 0 rgba(0, 0, 0, 0.15); 
- content: '';
- display: block;
- height: 9.5rem;
- position: absolute;
- top: 0;
- left:0;
- width: 100%;
+
+   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.9), 0 0 25px 0 rgba(0, 0, 0, 0.5);
+   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3), 0 0 25px 0 rgba(0, 0, 0, 0.15); 
+   content: '';
+   display: block;
+   height: 9.5rem;
+   position: absolute;
+   top: 0;
+   left:0;
+   width: 100%;
 } 
 
 .photo_header{
+
   background-image: url(./img/fond.jpg);
   background-repeat: no-repeat;  
   background-size: cover;
@@ -70,14 +77,21 @@ h3{
 .header{
   color:#95afc0;
 }
-.App-footer {
-  color:white;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3), 0 0 25px 0 rgba(0, 0, 0, 0.15); 
-  position: absolute;
-  bottom:0;
-  height: 60px;
-  width:100%;
+body{ 
+  display:flex; 
+  flex-direction:column; 
 }
+/* .App-footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height:60px;
+  background-color:white;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3), 0 0 25px 0 rgba(0, 0, 0, 0.15); 
+  height: 60px;
+
+} */
 input[type=number]{
   
     height: 40px;
@@ -88,12 +102,11 @@ input[type=number]{
    /*  border: #4788F4 solid 1px; */
     border:none;
     box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.3); 
-    margin-top: 5px; 
     outline: none;
     padding: 0 20px;
     box-sizing: border-box;
     font-size: 16px;
-     color:#95afc0;
+    color:#95afc0;
 }
 
 
@@ -103,17 +116,19 @@ input[type=number]{
 
 
 .select-search-box {
-  width: 180px;
+  width: 140px;
   position: relative;
-  height: 50px;
+  height: 40px;
   margin-left: 20px;
   /* background-color:#eaeae5;  GRIS */
-  
+  min-width: 140px;
   background-color:#4A5259;
   border-radius: 8px;
-  padding-left: 10px;
+
 
 }
+
+
 .select-search-box[name = change]{
 
 }
@@ -121,7 +136,7 @@ input[type=number]{
 .select-search-box--input {
     box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.4);
   }
-
+/*firstline arrow*/
 .select-search-box::before {
     font-family: FontAwesome;
     content:"\f078";
@@ -130,16 +145,17 @@ input[type=number]{
     right: 0;
     width: 40px;
     text-align: center;
-    line-height: 50px;
+    line-height: 40px;
     color: #fff;
     z-index: 1;
+    font-size: 10px;
   }
   /*header arrow*/
   .header .select-search-box::after {
     font-family: fontawesome;
     content:"\f078";
     position: absolute;
-    font-size: 16px;
+    font-size: 10px;
     top: 0;
     margin-left: 1rem;
     width: 40px;
@@ -150,7 +166,7 @@ input[type=number]{
     z-index: 1;
 
   }
-  /*loop*/
+  /*loop  ????*/
   .firstLine .select-search-box__search::before {
     font-family: fontawesome;
     content:"\f002";
@@ -160,8 +176,8 @@ input[type=number]{
     width: 20px;
     text-align: center;
     line-height: 50px;
-    color: #fff;
-    z-index: 1;
+    color: red;
+    z-index: 10;
   }
 
   .header{
@@ -194,7 +210,7 @@ input[type=number]{
 
  .select-search-box__select--display {
     display: block;
-
+   
     }
 
      /*header usd*/
@@ -209,7 +225,7 @@ input[type=number]{
     border: none;
     background: none;
     outline: none;
-    font-size: 1.3rem;
+    font-size: 1rem;
     padding: 0 20px;
     color: #95afc0;
     -webkit-appearance: textfield;
@@ -233,12 +249,12 @@ input[type=number]{
     
     display: block;
     width: 100%;
-    height: 50px;
+    height: 40px;
     border: none;
     background: none;
     outline: none;
-    font-size: 16px;
-    padding: 0 20px;
+    font-size: 14px;
+    padding: 0px 15px;
     color: white;
     -webkit-appearance: textfield;
     -moz-box-sizing: border-box;
@@ -249,7 +265,7 @@ input[type=number]{
     z-index: 2;
     cursor: pointer;
     font-family: sans-serif;
-    line-height: 50px;
+    line-height: 40px;
 
   }
  
@@ -299,7 +315,7 @@ input[type=number]{
   .select-search-box__select {
     display: none;
     position: absolute;
-    top: 44px;
+    top: 36px;
     left: 0;
     right: 0;
     /* background: #EAF2F8; */
@@ -313,6 +329,33 @@ input[type=number]{
     min-height: 49px;
 
   }
+  /*-----------------------webkit-scrollbar-----------------------*/
+.select-search-box__select::-webkit-scrollbar {
+  background-color:white;
+  width:10px;
+  height: 15px;
+}
+.select-search-box__select::-webkit-scrollbar-thumb {
+  background-color:grey;
+  /* height: 60px;
+  max-height: 60px; */
+  border:2px solid white;
+  border-radius:10px;
+}
+.App::-webkit-scrollbar {
+  background-color:white;
+  width:10px;
+  height: 15px;
+}
+.App::-webkit-scrollbar-thumb {
+  color:red;
+  background-color:grey;
+  height: 60px;
+  border:2px solid white;
+  border-radius:10px;
+}
+/*---------------------------------------------------------------------*/
+
 
   .select-search-box--multiple .select-search-box__select {
     display: block;
@@ -374,15 +417,11 @@ ul.select-search-box__options {
    height: 2.7rem;
 }
 .firstLine{
-  display: flex; 
-  flex-direction: row;  
-
- /*  background-color: #37353a;  */
- /*  background-color: #F2F2F0 ;  */ 
+  display: flex;   
   background-color: white ;     
   justify-content: center;
   align-content: center; 
-  height: 4.1rem;
+  height: 3.3rem;
   margin-top: 0rem;
   padding-top: 1rem; 
 /*   padding-bottom: .5rem; */
@@ -403,22 +442,17 @@ ul.select-search-box__options {
   align-self: flex-start;
   width:15rem;
   font-size: 1.1rem;
-  height: 50px;
-  /* border: #5D6D7E solid 1px; */
+  height: 40px; 
   background:transparent;
-  border-radius:12px;
-  /* box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.4); */
-  margin-left: 20px; 
+  margin-left: 14px; 
+
   color:#95afc0;
   outline: none;
-  padding: 12px 0px;
   box-sizing: border-box;
-  
+  line-height:40px; 
 }
 .price_aff{
-  
   background:  #fff;
- 
   margin-top: 60px;
   color:#95afc0;
   line-height: 60px;
@@ -430,10 +464,13 @@ ul.select-search-box__options {
   font-size: 1.5rem;
   height: 60px;
   margin: 0 auto;
+  margin-bottom: 4rem;
   width: 40%;
 }
-.resultat{
-
+.time{
+   color:#95afc0;
+   display: flex;
+   margin-left: 2rem
 }
 .buttons{
   
@@ -445,7 +482,7 @@ ul.select-search-box__options {
   /* background-color: #37353a; */
   background-color: white;
   padding: 0;
-  height: 4rem;
+  height: 2rem;
 
   
 }
@@ -472,7 +509,7 @@ button{
    font-size: 3rem;
    position: absolute;
    z-index: 2;
-   margin-top: -2.7rem;
+   margin-top: -2.6rem;
    margin-left: -2.3rem;
    
   }
@@ -527,4 +564,76 @@ button{
 }
 .rotating3 {
     -webkit-animation: rotating3 .4s linear infinite;
+}
+
+
+/* -------------media query--------------------*/
+
+/*  de 0 a 400  */
+ /* @media (max-width: 400px) {
+ 
+  .firstLine{
+  min-width: 380px;     
+  height: 6rem;
+  }
+  .buttons{
+  margin-bottom: 1rem;
+  }
+ 
+ } */
+
+/*  de 400 a 800  */
+@media (max-width: 800px) {
+  .header > .select-search-box{
+  margin-right:2rem;
+  }
+  .firstLine{
+  flex-wrap: wrap; 
+  height: 6rem;
+  }
+.aff{
+  justify-content: center;
+  align-items: center; 
+  font-size: 1.3rem;
+  flex-basis: 100%;
+  margin-top: .1rem;
+}
+ .buttons{
+  margin-bottom: 1rem;
+  }
+.addition{
+  
+   position: absolute;
+   z-index: 2;
+   margin-top: -2.5rem;
+   margin-left: 0rem;
+  }
+  .price_aff{
+  width: 60%;
+}
+
+ }
+
+
+
+
+ /*  a partir de 800  */
+ @media (min-width: 800px) {
+ 
+ .header > .select-search-box{
+  padding-left: 0;
+  margin-right:15%;
+  }
+
+}
+/*  a partir de 1200  */
+@media (min-width: 1200px) {
+ 
+ .header > .select-search-box{
+  margin-right:30%;
+  }
+  .price_aff{
+  width: 40%;
+  }
+
 }
