--- a/src/App.css
+++ b/src/App.css
@@ -470,7 +470,7 @@ ul.select-search-box__options {
 .time{
    color:#95afc0;
    display: flex;
-   margin-left: 2rem
+   margin-left: 2rem;
 }
 .buttons{
   
