--- a/src/App.css
+++ b/src/App.css
@@ -533,7 +533,7 @@ button{
     color: #95afc0;
     z-index: 10;
   } */
-
+.
 
 /*--------------------------------------------------------------------------*/
 
