--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,12 @@
 
 }
 
-
+.logo_img{
+  position: absolute;
+  top:-5.5rem;
+  left:-2rem;
+  transform: scale(.2)
+}
 
 /*-----------------------------------------------*/
 
@@ -477,7 +482,7 @@ button#btn_mo,button#btn_pl{
   padding: 24px;
   line-height: 20px;
   width: 180px;
-  height: 84.5%;
+  height: 100%;
   background-color: #1289A7;
   left: 0;
   top:144px;
@@ -516,7 +521,7 @@ button#btn_mo,button#btn_pl{
   background-color:white;
   margin-bottom: 1rem;
   height:1.4rem;
-
+  color:#1289A7;
   cursor: pointer;
 }
 #reset,#stockage,#lecture{
@@ -525,6 +530,7 @@ button#btn_mo,button#btn_pl{
   line-height :1.4rem;
   cursor: pointer;
   width:118px;
+   color:#1289A7;
 }
 
 
